v1 - work! - wp4+ & fa5+

--- a/example/webpack-v4/index.html
+++ b/example/webpack-v4/index.html
@@ -1,11 +1,15 @@
 <!DOCTYPE html>
 <html>
-  <head>
-    <title>Font Awesome Loader</title>
-    <meta http-equiv="Content-type" content="text/html; charset=utf-8"/>
-    <link href="/assets/bundle.css" rel="stylesheet">
-  </head>
-  <body>
-    <script src="/assets/bundle.js"></script>
-  </body>
+
+<head>
+  <title>Font Awesome Loader</title>
+  <meta http-equiv="Content-type" content="text/html; charset=utf-8" />
+  <link href="/assets/bundle.css" rel="stylesheet">
+</head>
+
+<body>
+  <div class="icon"></div>
+  <script src="/assets/bundle.js"></script>
+</body>
+
 </html>
