--- a/example/webpack-v4/index.html
+++ b/example/webpack-v4/index.html
@@ -4,12 +4,13 @@
 <head>
   <title>Font Awesome Loader</title>
   <meta http-equiv="Content-type" content="text/html; charset=utf-8" />
-  <link href="/assets/bundle.css" rel="stylesheet">
+  <link href="assets/bundle.css" rel="stylesheet">
 </head>
 
 <body>
   <div class="icon"></div>
-  <script src="/assets/bundle.js"></script>
+  <i class="fas fa-headset fa-5x"></i>
+  <script src="assets/bundle.js"></script>
 </body>
 
 </html>
